examples/argocd/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`DOMAIN_NAME`)  # Will be patched by overlay
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-server-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`DOMAIN_NAME`) && Headers(`Content-Type`, `application/grpc`)  # Will be patched by overlay
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server-tls
